src/test/resources/LO-2/InvalidPrograms/test_18.lo
// Main takes parameters -- it should not

int main(int c) {
    int a, b;
    {
        return 1;
    }
}